extern/Hexapod/win_32/hxp_drivers.bas

Declare Function GroupMoveAbsolute Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, TargetPosition As Double) As Integer '  Do an absolute move
Declare Function GroupMoveRelative Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, TargetDisplacement As Double) As Integer '  Do a relative move
Declare Function GroupMotionDisable Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Set Motion disable on selected group
Declare Function GroupMotionEnable Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Set Motion enable on selected group
Declare Function GroupPositionCorrectedProfilerGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal PositionX As Double, ByVal PositionY As Double, CorrectedProfilerPositionX As Double, CorrectedProfilerPositionY As Double) As Integer '  Return corrected profiler positions
Declare Function GroupPositionCurrentGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, CurrentEncoderPosition As Double) As Integer '  Return current positions
Declare Function GroupPositionSetpointGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, SetPointPosition As Double) As Integer '  Return setpoint positions
Declare Function GroupPositionTargetGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, TargetPosition As Double) As Integer '  Return target positions
Declare Function GroupReferencingActionExecute Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal ReferencingAction As String, ByVal ReferencingSensor As String, ByVal ReferencingParameter As Double) As Integer '  Execute an action in referencing mode
Declare Function GroupReferencingStart Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Enter referencing mode
Declare Function GroupReferencingStop Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Exit referencing mode
Declare Function GroupStatusGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, Status As Integer) As Integer '  Return group status
Declare Function GroupStatusStringGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupStatusCode As Integer, ByVal GroupStatusString As String) As Integer '  Return the group status string corresponding to the group status code
Declare Function KillAll Lib "HXP_drivers.dll" (ByVal SocketIndex As Long) As Integer '  Put all groups in 'Not initialized' state
Declare Function RestartApplication Lib "HXP_drivers.dll" (ByVal SocketIndex As Long) As Integer '  Restart the Controller
Declare Function PositionerBacklashGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, BacklashValue As Double, ByVal BacklaskStatus As String) As Integer '  Read backlash value and status
Declare Function PositionerBacklashSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal BacklashValue As Double) As Integer '  Set backlash value
Declare Function PositionerBacklashEnable Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String) As Integer '  Enable the backlash
Declare Function PositionerBacklashDisable Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String) As Integer '  Disable the backlash
Declare Function PositionerCorrectorNotchFiltersSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal NotchFrequency1 As Double, ByVal NotchBandwith1 As Double, ByVal NotchGain1 As Double, ByVal NotchFrequency2 As Double, ByVal NotchBandwith2 As Double, ByVal NotchGain2 As Double) As Integer '  Update filters parameters 
Declare Function PositionerCorrectorNotchFiltersGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, NotchFrequency1 As Double, NotchBandwith1 As Double, NotchGain1 As Double, NotchFrequency2 As Double, NotchBandwith2 As Double, NotchGain2 As Double) As Integer '  Read filters parameters 
Declare Function PositionerCorrectorPIDFFAccelerationSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal ClosedLoopStatus As Boolean, ByVal KP As Double, ByVal KI As Double, ByVal KD As Double, ByVal KS As Double, ByVal IntegrationTime As Double, ByVal DerivativeFilterCutOffFrequency As Double, ByVal GKP As Double, ByVal GKI As Double, ByVal GKD As Double, ByVal KForm As Double, ByVal FeedForwardGainAcceleration As Double) As Integer '  Update corrector parameters
Declare Function PositionerCorrectorPIDFFAccelerationGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ClosedLoopStatus As Boolean, KP As Double, KI As Double, KD As Double, KS As Double, IntegrationTime As Double, DerivativeFilterCutOffFrequency As Double, GKP As Double, GKI As Double, GKD As Double, KForm As Double, FeedForwardGainAcceleration As Double) As Integer '  Read corrector parameters
Declare Function PositionerCorrectorPIDFFVelocitySet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal ClosedLoopStatus As Boolean, ByVal KP As Double, ByVal KI As Double, ByVal KD As Double, ByVal KS As Double, ByVal IntegrationTime As Double, ByVal DerivativeFilterCutOffFrequency As Double, ByVal GKP As Double, ByVal GKI As Double, ByVal GKD As Double, ByVal KForm As Double, ByVal FeedForwardGainVelocity As Double) As Integer '  Update corrector parameters
Declare Function PositionerCorrectorPIDFFVelocityGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ClosedLoopStatus As Boolean, KP As Double, KI As Double, KD As Double, KS As Double, IntegrationTime As Double, DerivativeFilterCutOffFrequency As Double, GKP As Double, GKI As Double, GKD As Double, KForm As Double, FeedForwardGainVelocity As Double) As Integer '  Read corrector parameters
Declare Function PositionerCorrectorPIDDualFFVoltageSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal ClosedLoopStatus As Boolean, ByVal KP As Double, ByVal KI As Double, ByVal KD As Double, ByVal KS As Double, ByVal IntegrationTime As Double, ByVal DerivativeFilterCutOffFrequency As Double, ByVal GKP As Double, ByVal GKI As Double, ByVal GKD As Double, ByVal KForm As Double, ByVal FeedForwardGainVelocity As Double, ByVal FeedForwardGainAcceleration As Double, ByVal Friction As Double) As Integer '  Update corrector parameters
Declare Function PositionerCorrectorPIDDualFFVoltageGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ClosedLoopStatus As Boolean, KP As Double, KI As Double, KD As Double, KS As Double, IntegrationTime As Double, DerivativeFilterCutOffFrequency As Double, GKP As Double, GKI As Double, GKD As Double, KForm As Double, FeedForwardGainVelocity As Double, FeedForwardGainAcceleration As Double, Friction As Double) As Integer '  Read corrector parameters
Declare Function PositionerCorrectorPIPositionSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal ClosedLoopStatus As Boolean, ByVal KP As Double, ByVal KI As Double, ByVal IntegrationTime As Double) As Integer '  Update corrector parameters
Declare Function PositionerCorrectorPIPositionGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ClosedLoopStatus As Boolean, KP As Double, KI As Double, IntegrationTime As Double) As Integer '  Read corrector parameters
Declare Function PositionerCorrectorTypeGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal CorrectorType As String) As Integer '  Read corrector type
Declare Function PositionerCurrentVelocityAccelerationFiltersSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal CurrentVelocityCutOffFrequency As Double, ByVal CurrentAccelerationCutOffFrequency As Double) As Integer '  Set current velocity and acceleration cut off frequencies
Declare Function PositionerCurrentVelocityAccelerationFiltersGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, CurrentVelocityCutOffFrequency As Double, CurrentAccelerationCutOffFrequency As Double) As Integer '  Get current velocity and acceleration cut off frequencies
Declare Function PositionerDriverStatusGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, DriverStatus As Integer) As Integer '  Read positioner driver status
Declare Function PositionerDriverStatusStringGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerDriverStatus As Integer, ByVal PositionerDriverStatusString As String) As Integer '  Return the positioner driver status string corresponding to the positioner error code
Declare Function PositionerEncoderAmplitudeValuesGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, CalibrationSinusAmplitude As Double, CurrentSinusAmplitude As Double, CalibrationCosinusAmplitude As Double, CurrentCosinusAmplitude As Double) As Integer '  Read analog interpolated encoder amplitude values
Declare Function PositionerEncoderCalibrationParametersGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, SinusOffset As Double, CosinusOffset As Double, DifferentialGain As Double, PhaseCompensation As Double) As Integer '  Read analog interpolated encoder calibration parameters
Declare Function PositionerErrorGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ErrorCode As Integer) As Integer '  Read and clear positioner error code
Declare Function PositionerErrorRead Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ErrorCode As Integer) As Integer '  Read only positioner error code without clear it
Declare Function PositionerErrorStringGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerErrorCode As Integer, ByVal PositionerErrorString As String) As Integer '  Return the positioner status string corresponding to the positioner error code
Declare Function PositionerHardwareStatusGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, HardwareStatus As Integer) As Integer '  Read positioner hardware status
Declare Function PositionerHardwareStatusStringGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerHardwareStatus As Integer, ByVal PositionerHardwareStatusString As String) As Integer '  Return the positioner hardware status string corresponding to the positioner error code
Declare Function PositionerHardInterpolatorFactorGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, InterpolationFactor As Integer) As Integer '  Get hard interpolator parameters
Declare Function PositionerHardInterpolatorFactorSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal InterpolationFactor As Integer) As Integer '  Set hard interpolator parameters
Declare Function PositionerMaximumVelocityAndAccelerationGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, MaximumVelocity As Double, MaximumAcceleration As Double) As Integer '  Return maximum velocity and acceleration of the positioner
Declare Function PositionerMotionDoneGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, PositionWindow As Double, VelocityWindow As Double, CheckingTime As Double, MeanPeriod As Double, TimeOut As Double) As Integer '  Read motion done parameters
